# remote-desktop-rs

./: .gitignore  Cargo.toml  README.md  example-config.toml  rustfmt.toml  taplo.toml
.github/workflows/: check.yml  test.yml
domains/rdrs-player/: Cargo.toml
domains/rdrs-player/src/: error.rs  lib.rs  repository.rs
domains/rdrs-player/src/entity/: player.rs
domains/rdrs-player/src/service/: decoder.rs  mod.rs  player_manager.rs  renderer.rs
domains/rdrs-player/src/service_impl/: mod.rs  player_manager.rs
domains/rdrs-player/src/vo/: mod.rs  pixel_format.rs  stream_info.rs  video_info.rs
infrastructures/rdrs-codec/: Cargo.toml
infrastructures/rdrs-codec/src/: codec.rs  codec_manager.rs  decoder.rs  decoder_generator.rs  lib.rs  pixel.rs  pixel_transform.rs  stream_clock.rs  video_frame.rs
infrastructures/rdrs-codec/src/codec/: mod.rs  video.rs
infrastructures/rdrs-gui/: Cargo.toml  build.rs
infrastructures/rdrs-gui/src/: lib.rs  slint.rs
infrastructures/rdrs-gui/src/slint/: mod.rs
infrastructures/rdrs-gui/ui/slint/: appwindow.slint
infrastructures/rdrs-renderer/: Cargo.toml
infrastructures/rdrs-repository/: Cargo.toml
infrastructures/rdrs-repository/src/: lib.rs
infrastructures/rdrs-webrtc/: Cargo.toml
infrastructures/remote-desk-codec/: Cargo.toml
infrastructures/remote-desk-codec/src/: codec.rs  lib.rs  video_frame.rs
infrastructures/remote-desk-decoder/: Cargo.toml
infrastructures/remote-desk-decoder/src/: lib.rs  stream_decoder.rs
infrastructures/remote-desk-renderer/: Cargo.toml
infrastructures/remote-desk-webrtc/: Cargo.toml
rdrs-cli/: Cargo.toml
rdrs-core/: Cargo.toml
rdrs-core/src/: lib.rs
rdrs-core/src/infra_trait/: codec.rs  mod.rs
rdrs-core/src/model/: mod.rs  pixel.rs
rdrs-core/src/model/entity/: mod.rs  stream_source.rs  video_frame.rs
rdrs-core/src/model/vo/: mod.rs  pixel.rs
rdrs-core/src/service/: codec.rs  codec_manager.rs  gui.rs  mod.rs  transcoder.rs  video_frame_handler.rs
rdrs-core/src/service_impl/: codec_manager.rs  mod.rs
rdrs-flutter/: Cargo.toml
rdrs-kernel/: Cargo.toml
rdrs-kernel/src/: config.rs  lib.rs
rdrs-kernel/src/container/: boilerplate.rs  mod.rs
rdrs-kernel/src/controls/: mod.rs
rdrs-kernel/src/telemetry/: config.rs  mod.rs
rdrs-slint/: Cargo.toml  build.rs
rdrs-slint/examples/: video_player.rs
rdrs-slint/src/: configuration.rs  lib.rs  main.rs
rdrs-tools/: Cargo.toml
rdrs-tools/src/: error.rs  lib.rs
remote-desk-cli/: Cargo.toml
remote-desk-config/: Cargo.toml
remote-desk-config/src/: lib.rs
remote-desk-core/: Cargo.toml
remote-desk-core/src/model/entity/: mod.rs  stream_source.rs  video_frame.rs
remote-desk-core/src/service/: bar.rs  foo.rs  mod.rs  stream_decoder.rs
remote-desk-flutter/: Cargo.toml
remote-desk-infra/: Cargo.toml
remote-desk-infra/src/: lib.rs
remote-desk-infra/src/container/: boilerplate.rs  mod.rs
remote-desk-infra/src/controls/: mod.rs
remote-desk-infra/src/implements/: mod.rs  stream_decoder.rs
remote-desk-infra/src/infras/: bar.rs  foo.rs  mod.rs
remote-desk-kernel/: Cargo.toml
remote-desk-kernel/src/: config.rs  lib.rs
remote-desk-kernel/src/container/: boilerplate.rs  mod.rs
remote-desk-kernel/src/controls/: mod.rs
remote-desk-kernel/src/telemetry/: config.rs  mod.rs
remote-desk-slint/: Cargo.toml
remote-desk-slint/examples/: README.md  video_player.rs
remote-desk-slint/src/: config.rs  configuration.rs  lib.rs  main.rs
remote-desk-tools/: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/container/: boilerplate.rs  mod.rs
src/domain/: bar.rs  foo.rs  mod.rs
src/service/: bar.rs  foo.rs  mod.rs
