[workspace]
resolver        = "2"
members         = ["remote-desk*", "infrastructures/*"]
default-members = ["remote-desk-slint", "remote-desk-flutter"]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
panic         = "abort"

[profile.product]
inherits = "release"
lto      = "fat"

[workspace.dependencies]
serde          = "1.0"
serde_json     = "1.0"
tokio          = "1.39"
dep-inj        = "0.1"
dep-inj-target = "0.1"
tracing        = "0.1"
config         = "0.14"

remote-desk-core    = { path = "remote-desk-core" }
remote-desk-kernel  = { path = "remote-desk-kernel" }
remote-desk-tools   = { path = "remote-desk-tools" }
remote-desk-flutter = { path = "remote-desk-flutter" }
remote-desk-slint   = { path = "remote-desk-slint" }
remote-desk-codec   = { path = "infrastructures/remote-desk-codec" }
remote-desk-webrtc  = { path = "infrastructures/remote-desk-webrtc" }
