[workspace]
resolver        = "2"
members         = ["rdrs-*", "infrastructures/*"]
default-members = ["rdrs-slint", "rdrs-flutter"]

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
panic         = "abort"

[profile.product]
inherits = "release"
lto      = "fat"

[workspace.dependencies]
serde          = "1.0"
serde_json     = "1.0"
tokio          = "1.39"
dep-inj        = "0.1"
dep-inj-target = "0.1"
tracing        = "0.1"
config         = "0.14"

rdrs-core    = { path = "rdrs-core" }
rdrs-kernel  = { path = "rdrs-kernel" }
rdrs-tools   = { path = "rdrs-tools" }
rdrs-flutter = { path = "rdrs-flutter" }
rdrs-slint   = { path = "rdrs-slint" }
rdrs-codec   = { path = "infrastructures/rdrs-codec" }
rdrs-webrtc  = { path = "infrastructures/rdrs-webrtc" }
rdrs-gui     = { path = "infrastructures/rdrs-gui" }
