[package]
name        = "rdrs-flutter"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk flutter GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-kernel = { workspace = true }
