[package]
name        = "rdrs-kernel"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk kernel"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-core   = { workspace = true }
rdrs-tools  = { workspace = true }
rdrs-codec  = { workspace = true }
rdrs-webrtc = { workspace = true }
rdrs-gui    = { workspace = true, optional = true }

tokio                 = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
config                = { workspace = true }
derive_more           = { version = "1.0", features = ["as_ref"] }
tracing               = { workspace = true }
tracing-appender      = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.25", optional = true }
tracing-subscriber    = { version = "0.3", features = ["env-filter", "time", "local-time"], optional = true }
opentelemetry         = { version = "0.24", optional = true }
opentelemetry-otlp    = { version = "0.17", optional = true }
opentelemetry_sdk     = { version = "0.24", features = ["rt-tokio"], optional = true }
chrono                = "0.4"
time                  = "0.3"

[features]
default = []
telemetry = [
  "dep:tracing-opentelemetry",
  "dep:tracing-subscriber",
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-appender",
]
slint = ["dep:rdrs-gui", "rdrs-gui/slint"]
server_only = []
