[package]
name        = "rdrs-slint"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk slint GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-kernel = { workspace = true, features = ["telemetry", "slint"] }
serde       = { workspace = true, features = ["derive"] }

tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
[dev-dependencies]
config = { workspace = true }
