[package]
name        = "rdrs-slint"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk slint GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-tools         = { workspace = true }
rdrs-kernel        = { workspace = true, features = ["telemetry", "slint"] }
rdrs-domain-player = { workspace = true }

serde   = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tokio   = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
config = { workspace = true }
