[package]
name        = "remote-desk-config"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk configration"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
serde = { workspace = true }
