[package]
name        = "remote-desk-slint"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk slint GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
remote-desk-infra = { workspace = true }
