[package]
name        = "remote-desk-slint"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk slint GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
tokio             = { workspace = true }
remote-desk-infra = { workspace = true }

slint = "1.7"

[build-dependencies]
slint-build = "1.7"
