[package]
name        = "remote-desk-slint"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk slint GUI"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
remote-desk-kernel = { workspace = true, features = ["telemetry"] }

tokio   = { workspace = true }
serde   = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

# NOTE:
# i-slint-backend-winit does not adhere to semver and may introduce breaking changes in any patch release.
i-slint-backend-winit = "1.7.2"
slint                 = { version = "1.7.2", default-features = false, features = ["backend-winit", "accessibility", "compat-1-2", "renderer-skia", "std"] }

[build-dependencies]
slint-build = "1.7"
