[package]
name        = "rdrs-codec"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk codec"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-domain-player = { workspace = true }
rdrs-gui           = { workspace = true }
rdrs-tools         = { workspace = true }

tracing        = { workspace = true }
tokio          = { workspace = true, features = ["macros", "time", "sync"] }
dep-inj        = { workspace = true }
dep-inj-target = { workspace = true }
ffmpeg-next    = "7.0"
cpal           = "0.15"
ringbuf        = "0.4"
bytemuck       = "1.18"
