[package]
name        = "rdrs-repository"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk repository"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-domain-player = { workspace = true }
rdrs-tools         = { workspace = true }

dep-inj        = { workspace = true }
dep-inj-target = { workspace = true }
