[package]
name        = "rdrs-webrtc"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk webrtc"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
rdrs-core   = { workspace = true }

dep-inj        = { workspace = true }
dep-inj-target = { workspace = true }
