[package]
name        = "remote-desk-codec"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk codec"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
remote-desk-core  = { workspace = true }
remote-desk-tools = { workspace = true }

tracing        = { workspace = true }
tokio          = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "time", "sync"] }
dep-inj        = { workspace = true }
dep-inj-target = { workspace = true }
ffmpeg-next    = "7.0"
