[package]
name        = "remote-desk-webrtc"
version     = "0.1.0"
edition     = "2021"
license     = "GPL"
authors     = ["zooeywm <zooeywm@gmail.com>"]
description = "remote-desk webrtc"
repository  = "https://github.com/zooeywm/remote-desktop-rs"

[dependencies]
remote-desk-core   = { workspace = true }
remote-desk-tools  = { workspace = true }
remote-desk-config = { workspace = true }

tokio          = { workspace = true }
anyhow         = { workspace = true }
dep-inj        = { workspace = true }
dep-inj-target = { workspace = true }
webrtc         = "0.11"
